feat: add form page & connect to mongoDB

--- a/task6/views/number-guesser.ejs
+++ b/task6/views/number-guesser.ejs
@@ -30,7 +30,7 @@
 					id="number"
 					required
 				/>
-				<div class="row" style="margin-top:20px">
+				<div class="row" style="padding-top:20px">
 					<div class="col-md-6">
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</div>
