--- a/task6/views/index.ejs
+++ b/task6/views/index.ejs
@@ -20,11 +20,11 @@
 
 	<body>
 		<div class="container text-center" style="padding-top: 200px">
-			<% if (title === 'Home') { %>
 			<header class="h1" style="color:rgba(173, 216, 230, 1)">
 				Hello <%= userName %>
 			</header>
-			<div class="row" style="margin-top:20px">
+			
+			<div class="row" style="padding-top:20px">
 				<div class="col-md-6">
 					<a href=<%= btnLeft.toLowerCase() %>>
 						<button type="button" class="btn btn-primary"><%= btnLeft.substr(1) %></button>
@@ -36,36 +36,6 @@
 					</a>
 				</div>
 			</div>
-			<% } else { %>
-				<form class="form-horizontal">
-					<div class="form-group">
-						<label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-						<div class="col-sm-10">
-							<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-						<div class="col-sm-10">
-							<input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-offset-2 col-sm-10">
-							<div class="checkbox">
-								<label>
-									<input type="checkbox"> Remember me
-								</label>
-							</div>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-offset-2 col-sm-10">
-							<button type="submit" class="btn btn-primary">Sign in</button>
-						</div>
-					</div>
-				</form>
-			<% } %>
 		</div>
 	</body>
 </html>
