--- a/task6/views/forms.ejs
+++ b/task6/views/forms.ejs
@@ -31,8 +31,9 @@
 						name="username"
 						required
 					/>
+					<!-- 用于重名检查 -->
 					<div class="invalid-feedback">
-						Please choose a username.
+						Username existed! Please choose another one.
 					</div>
 				</div>
 				<div class="form-group">
@@ -49,7 +50,7 @@
 
 				<div class="row" style="padding-top:20px">
 					<div class="col-md-6">
-						<button type="submit" class="btn btn-primary">
+						<button type="submit" class="btn btn-primary" disabled>
 							<%= btnLeft.substr(1) %>
 						</button>
 					</div>
@@ -76,14 +77,37 @@
 					() => {
 						const forms = document.getElementsByTagName('form')
 						const validation = Array.prototype.filter.call(forms, form => {
-							const username = document.querySelector('#username')
-							username.addEventListener('blur', event => {
-								if (event.target.value) {
-									$.ajax({ url: 'check-name', data: event.target.value }).done(
-										res => console.log(res),
-									)
-								}
-							})
+							// 在 username 失去焦点时对用户名进行重名检查
+							document
+								.getElementById('username')
+								.addEventListener('blur', event => {
+									if (event.target.value) {
+										$.ajax({
+											url: 'check-name',
+											data: event.target.value,
+										}).done(
+											// TODO: 用 fetch 代替 $.ajax
+											response => {
+												;[].forEach.call(
+													document.getElementsByClassName('invalid-feedback'),
+													item => {
+														// 无结果说明改用户名还没被占用
+														item.style.display =
+															response === 'no result' ? 'none' : 'block'
+													},
+												)
+												;[].forEach.call(
+													document.querySelectorAll('button[type=submit]'),
+													item => {
+														item.disabled =
+															response === 'no result' ? false : true
+													},
+												)
+											},
+										)
+									}
+								})
+
 							form.addEventListener(
 								'submit',
 								event => {
