feat: add register

--- a/task6/views/index.ejs
+++ b/task6/views/index.ejs
@@ -20,7 +20,7 @@
 
 	<body>
 		<div class="container text-center" style="padding-top: 200px">
-			<header class="h1" style="color:rgba(173, 216, 230, 1)">
+			<header class="h1" style="color:rgba(173, 216, 230, 1); padding-bottom: 50px">
 				Hello <%= userName %>
 			</header>
 			
