--- a/task6/views/forms.ejs
+++ b/task6/views/forms.ejs
@@ -20,6 +20,12 @@
 
 	<body>
 		<div class="container text-center" style="padding-top: 200px">
+			<header
+				class="h1"
+				style="color:rgba(173, 216, 230, 1); padding-bottom: 50px"
+			>
+				<%= title %>
+			</header>
 			<form name="register" method="POST">
 				<div class="form-group">
 					<label for="username">Username</label>
@@ -55,7 +61,7 @@
 						</button>
 					</div>
 					<div class="col-md-6">
-						<a href="/login">
+						<a href="<%= btnRight %>">
 							<button type="button" class="btn btn-info">
 								<%= btnRight.substr(1) %>
 							</button>
