--- a/task6/views/forms.ejs
+++ b/task6/views/forms.ejs
@@ -61,7 +61,7 @@
 						</button>
 					</div>
 					<div class="col-md-6">
-						<a href="<%= btnRight %>">
+						<a href="<%= btnRight.toLowerCase() %>">
 							<button type="button" class="btn btn-info">
 								<%= btnRight.substr(1) %>
 							</button>
@@ -81,48 +81,49 @@
 				window.addEventListener(
 					'load',
 					() => {
+						const url = document.URL.split('localhost:3000')[1]
 						const forms = document.getElementsByTagName('form')
-						const validation = Array.prototype.filter.call(forms, form => {
+						Array.prototype.filter.call(forms, form => {
 							// 在 username 失去焦点时对用户名进行重名检查
-							document
-								.getElementById('username')
-								.addEventListener('blur', event => {
-									if (event.target.value) {
-										$.ajax({
-											url: 'check-name',
-											data: event.target.value,
-										}).done(
-											// TODO: 用 fetch 代替 $.ajax
-											response => {
-												;[].forEach.call(
-													document.getElementsByClassName('invalid-feedback'),
-													item => {
-														// 无结果说明改用户名还没被占用
-														item.style.display =
-															response === 'no result' ? 'none' : 'block'
-													},
-												)
-												;[].forEach.call(
-													document.querySelectorAll('button[type=submit]'),
-													item => {
-														item.disabled =
-															response === 'no result' ? false : true
-													},
-												)
-											},
-										)
-									}
-								})
-
-							form.addEventListener(
-								'submit',
-								event => {
-									// document.register.action = `/`
-									// event.preventDefault()
-									// return false
-								},
-								false,
-							)
+							if (url === '/register') {
+								document
+									.getElementById('username')
+									.addEventListener('blur', event => {
+										if (event.target.value) {
+											$.ajax({
+												url: 'check-name',
+												data: event.target.value,
+											}).done(
+												// TODO: 用 fetch 代替 $.ajax
+												response => {
+													;[].forEach.call(
+														document.getElementsByClassName('invalid-feedback'),
+														item => {
+															// 无结果说明改用户名还没被占用
+															item.style.display =
+																response === 'no result' ? 'none' : 'block'
+														},
+													)
+													;[].forEach.call(
+														document.querySelectorAll('button[type=submit]'),
+														item => {
+															item.disabled =
+																response === 'no result' ? false : true
+														},
+													)
+												},
+											)
+										}
+									})
+							} else if (url === '/login') {
+								;[].forEach.call(
+									document.querySelectorAll('button[type=submit]'),
+									item => {
+										// login 页面不需要阻止提交
+										item.disabled = false
+									},
+								)
+							}
 						})
 					},
 					false,
