--- a/task6/views/number-guesser.ejs
+++ b/task6/views/number-guesser.ejs
@@ -19,7 +19,10 @@
 
 	<body>
 		<div class="container text-center" style="padding-top: 200px">
-			<header class="h1" style="color:rgba(173, 216, 230, 1)">
+			<header
+				class="h1"
+				style="color:rgba(173, 216, 230, 1); padding-bottom: 50px"
+			>
 				Number Guesser
 			</header>
 			<form method="post" name="guess">
